--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
                 <h2 class="english">About KrishiBazaar</h2>
                 <h2 class="hindi hidden">कृषि बाजार के बारे में</h2>
                 
-                <p class="english">KrishiBazaar is a revolutionary platform connecting farmers directly with buyers, eliminating middlemen and ensuring fair prices for agricultural produce.</p>
+                <p class="english">KrishiBazaar is a revolutionary platform connecting farmers directly with buyers, eliminating middlemen and ensuring fair prices for agricultural produce (editing for git repo).</p>
                 <p class="hindi hidden">कृषि बाजार एक क्रांतिकारी प्लेटफॉर्म है जो किसानों को सीधे खरीदारों से जोड़ता है, बिचौलियों को हटाता है और कृषि उत्पादों के लिए उचित मूल्य सुनिश्चित करता है।</p>
                 
                 <h3 class="english" style="margin-top: 2rem;">Our Mission</h3>
